--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationPropertiesDialog.form
@@ -69,15 +69,6 @@
           </grid>
         </children>
       </grid>
-      <component id="b5d35" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="9e443"/>
-          <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="xslLocationLabel.text"/>
-        </properties>
-      </component>
       <vspacer id="885a2">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
@@ -85,12 +76,6 @@
           </grid>
         </constraints>
       </vspacer>
-      <component id="9e443" class="javax.swing.JComboBox" binding="cbXslLocation">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <vspacer id="82d88">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
@@ -165,6 +150,51 @@
               <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </nested-form>
+        </children>
+      </grid>
+      <grid id="92a04" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="b5d35" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <labelFor value="9e443"/>
+              <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="xslLocationLabel.text"/>
+            </properties>
+          </component>
+          <component id="9e443" class="javax.swing.JComboBox" binding="cbXslLocation">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="e812a" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <labelFor value="ffd37"/>
+              <text value="&amp;XSLT Version:"/>
+            </properties>
+          </component>
+          <component id="ffd37" class="javax.swing.JComboBox" binding="xsltVersionComboBox">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <model>
+                <item value="1.0"/>
+                <item value="2.0"/>
+              </model>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
