--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/FaultLevelPropertiesDialogForm.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/FaultLevelPropertiesDialogForm.form
@@ -3,7 +3,7 @@
   <grid id="29b05" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="49" y="48" width="673" height="549"/>
+      <xy x="49" y="48" width="673" height="574"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -47,7 +47,7 @@
           </component>
         </children>
       </grid>
-      <grid id="e4918" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e4918" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -85,7 +85,7 @@
                   <contentType value="text/html"/>
                   <editable value="false"/>
                   <inheritsPopupMenu value="false"/>
-                  <text value="&lt;html&gt;&#10;  &lt;head&gt;&#10;    &#10;  &lt;/head&gt;&#10;  &lt;body&gt;&#10;  &lt;/body&gt;&#10;&lt;/html&gt;&#10;"/>
+                  <text value="&lt;html&gt;&#13;&#10;  &lt;head&gt;&#13;&#10;&#13;&#10;  &lt;/head&gt;&#13;&#10;  &lt;body&gt;&#13;&#10;    &lt;p style=&quot;margin-top: 0&quot;&gt;&#13;&#10;      &#13;&#10;    &lt;/p&gt;&#13;&#10;  &lt;/body&gt;&#13;&#10;&lt;/html&gt;&#13;&#10;"/>
                 </properties>
               </component>
             </children>
@@ -124,6 +124,14 @@
             </constraints>
             <properties>
               <text value="Use SOAP Fault for all errors"/>
+            </properties>
+          </component>
+          <component id="a0c2e" class="javax.swing.JCheckBox" binding="useClientFault">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Use Client fault code for all errors"/>
             </properties>
           </component>
         </children>
